--- a/frontend/csyllabus/src/styles.css
+++ b/frontend/csyllabus/src/styles.css
@@ -2,7 +2,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700');
-
+@import '~font-awesome/css/font-awesome.min.css';
 h1 {
   font-family: 'Inconsolata', serif;
   color: white;
