Meta tags for sharing

--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,3 +1,13 @@
+<head>
+    <meta property="og:url" content="https://csyllabus.com/demo/" />
+    <meta property="og:title" content="Global Computer Science Repository" />
+    <meta property="og:description" content="{{course.name}},{{course.university}}" />
+    <meta property="og:image" content="http://i64.tinypic.com/25810td.jpg" />
+    <meta property="nxs:via" content="Csyllabus" />
+    <meta property="nxs:hashtags" content="Csyllabus"/>
+</head>
+
+
 <div class="container">
   <div class="col-md-12">
     <p *ngIf="!course" loading>course:</p>
