--- a/frontend/csyllabus/src/app/components/social/social.component.html
+++ b/frontend/csyllabus/src/app/components/social/social.component.html
@@ -4,7 +4,10 @@
 [pinterest]="false"
 [stumbleUpOn]="false"
 [reddit]="false"
-[tumblr]="false"></share-buttons>
+[tumblr]="false"
+>
+<!-- [title]="title" [description]="description" [image]="image"--> 
+</share-buttons>
 </div> 
 <div class ="comentspart">
     <h3>Comment this Syllabus:</h3>
