--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -37,7 +37,7 @@
               <a mat-icon-button target="_blank" href="https://csyllabus.com/demo/course/{{course.id}}">
                 <mat-icon>link</mat-icon>
               </a>
-<app-social [courseId]='{{course.id}}' ></app-social>
+<app-social [courseId]=course.id ></app-social>
             </form>
           </div>
 
