Log in template corrected

--- a/frontend/csyllabus/src/app/components/social/social.component.html
+++ b/frontend/csyllabus/src/app/components/social/social.component.html
@@ -9,46 +9,43 @@
 <!-- [title]="title" [description]="description" [image]="image"-->
 </share-buttons>
 </div>
+
 <div class ="comentspart">
     <h3>Comment this Syllabus:</h3>
-<div class="jumbotron bg-transparent text-center">
-  <!-- The following is shown if the user is not logged ing -->
-  <div *ngIf="!user" class="card text-center">
-    <h6 class="card-header">
-      Comments not Available
-    </h6>
-    <div class="card-block">
-      <h4 class="card-title">Not signed in yet</h4>
-      <p class="card-text">Sign in with</p>
-    </div>
-    <div class="card-block">
-      <button class="Googlebutton" (click)="signInWithGoogle()"></button>
-      <button class="Facebookbutton" (click)="signInWithFB()"></button>
-    </div>
-  </div>
-  <!-- The following is shown if the user is logged ing -->
-  <div *ngIf="user" class="card text-center">
-    <h6 class="card-header">
-      Comments Available
-    </h6>
-    <div class="commentscontainer" *ngIf="comments">
-      <div *ngFor="let comment of comments; let i = index" class="comment" [hidden]="i >= 12*page">
-              <p >{{comment.author}}: {{ comment.content }}</p>
-      </div>
-    <div class="">
+<ng-container *ngIf="user;then content else other_content">here is ignored</ng-container>
+    
+<!-- The following is shown if the user is logged ing -->
+    <ng-template  #content>
+        <h6 class="card-header">
+            Comments Available
+        </h6>
+        <div class="commentscontainer" *ngIf="comments">
+            <div *ngFor="let comment of comments; let i = index" class="comment" [hidden]="i >= 12*page">
+                    <p >{{comment.author}}: {{ comment.content }}</p>
+            </div>
+          </div>
+        <img class="card-img-top img-responsive photo" src="{{ user.photoUrl }}">
+        <div class="card-block">
+          <h4 class="card-title">{{ user.name }}</h4>
+          <p class="card-text">{{ user.email }}</p>
+        </div>
+        <div class="card-block">
+          <button class="btn btn-danger" (click)="signOut()">Sign out</button>
+        </div>
+    </ng-template>
+<!-- The following is shown if the user is not logged ing -->    
+    <ng-template #other_content>
+        <h6 class="card-header">
+            Comments not Available
+          </h6>
+          <div class="card-block">
+            <h4 class="card-title">Not signed in yet</h4>
+            <p class="card-text">Sign in with</p>
+          </div>
+          <div class="card-block">
+            <button class="Googlebutton" (click)="signInWithGoogle()"></button>
+            <button class="Facebookbutton" (click)="signInWithFB()"></button>
+          </div>
+    </ng-template>
 
-    </div>
-
-    </div>
-    <div class="card-block"></div>
-    <img class="card-img-top img-responsive photo" src="{{ user.photoUrl }}">
-    <div class="card-block">
-      <h4 class="card-title">{{ user.name }}</h4>
-      <p class="card-text">{{ user.email }}</p>
-    </div>
-    <div class="card-block">
-      <button class="btn btn-danger" (click)="signOut()">Sign out</button>
-    </div>
-  </div>
-</div>
-</div>
+ 
