--- a/frontend/admin/src/app/user/user/user.component.html
+++ b/frontend/admin/src/app/user/user/user.component.html
@@ -34,7 +34,7 @@
       </mat-form-field>
       <br>
       <mat-form-field>
-        <input matInput placeholder="Email" [(ngModel)]="user.email" type="email">
+        <input matInput required placeholder="Email" [(ngModel)]="user.email" type="email">
       </mat-form-field>
       <br>
       <mat-form-field class="input">
