anchor error fix

--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -5,7 +5,7 @@
             <p style="font-size:1.3em;">Discover courses all over the world</p>
             <h1 style="color:white; font-size:">Going on Erasmus and don't know which courses to take?</h1>
             <ul class="actions">
-               <li> <a class="button big special scrolly" fragment="start" [routerLink]="['/core']" (click)="onAnchorClick()">Explore and compare courses</a>
+               <li> <a class="button big special scrolly" fragment="start" (click)="getStarted()">Explore and compare courses</a>
 </li>
             </ul>
         </div>
