results and docs fix

--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -280,7 +280,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="get-started-button wow bounceInDown" data-wow-delay="0.5s">
-                        <a routerLink="/documentation" >Get Started</a>
+                        <a routerLink="/connect" >Get Started</a>
                     </div>
                 </div>
             </div>
