--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.html
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.html
@@ -7,7 +7,7 @@
             <p>The Csyllabus Developer Center</p>
             <h1>Connect your course data with us</h1>
             <ul class="actions">
-               <li> <a class="button big special scrolly" [routerLink]="['/documentation']" fragment="one" (click)="onAnchorClick()">Start</a>
+               <li> <a class="button big special scrolly" (click)="getStarted()">Start</a>
 </li>
             </ul>
         </div>
@@ -22,9 +22,7 @@
                         <h2>Big student community</h2>
                     </header>
                     <p>The Csyllabus community is rapidly growing! Students are coming at Csyllabus to search and explore courses they want to enrol. Don't miss out! Have your Faculty syllabus listed in our app now!</p>
-                    <ul class="actions">
-                        <li><a href="/sandbox" class="button">More</a></li>
-                    </ul>
+
                 </article>
                 <article>
                     <header class="major">
@@ -32,9 +30,7 @@
                         <h2>Push course data to Csyllabus</h2>
                     </header>
                     <p>Follow our instructions on how to connect with us and have students all over the world exploring your faculty courses. To connect with our application and give us data, you need to be authorized. Get in touch with us!</p>
-                    <ul class="actions">
-                        <li><a href="#" class="button">More</a></li>
-                    </ul>
+
                 </article>
             </section>
         </div>
@@ -48,23 +44,6 @@
         </div>
     </section>
 
-    <section id="three" class="wrapper">
-        <div class="inner">
-            <header class="major alt">
-                <p>Read</p>
-                <h2>Developer Tutorials</h2>
-            </header>
-            <section class="posts">
-                <article>
-                    <span class="image"><img src="images/pic01.jpg" alt=""></span>
-                    <div class="content">
-                        <p>Written and maintained by Csyllabus team, here you will find tutorials that help you get started with connecting to our Csyllabus app. If you have any problems understanding, please feel free to contact us.</p>
-
-                    </div>
-                </article>
-            </section>
-        </div>
-    </section>
 
     <section id="four" class="wrapper style2 alt" >
         <div class="inner">
@@ -101,4 +80,23 @@
         </div>
     </section>
 
+<!--
+    <section id="three" class="wrapper">
+        <div class="inner">
+            <header class="major alt">
+                <p>Read</p>
+                <h2>Developer Tutorials</h2>
+            </header>
+            <section class="posts">
+                <article>
+                    <span class="image"><img src="images/pic01.jpg" alt=""></span>
+                    <div class="content">
+                        <p>Written and maintained by Csyllabus team, here you will find tutorials that help you get started with connecting to our Csyllabus app. If you have any problems understanding, please feel free to contact us.</p>
+
+                    </div>
+                </article>
+            </section>
+        </div>
+    </section>
+    -->
 </div>
