--- a/frontend/csyllabus/src/app/components/navbar/navbar.component.html
+++ b/frontend/csyllabus/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <img routerLink="core" class="logo" src="https://preview.ibb.co/cLsuiR/logotopbar.png">
 
     <div id="navigation">
-    <a routerLink="documentation">DOCUMENTATION</a>
+    <a routerLink="connect">CONNECT</a>
     <a routerLink="about">ABOUT</a>
     <a routerLink="core">EXPLORE & COMPARE</a>
         </div>
